--- a/Example_MSM.ipynb
+++ b/Example_MSM.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "from scipy import io\n",
     "import numpy as np\n",
-    "mat = io.loadmat(\"../sample_dataset/doubutsu.mat\")\n",
+    "mat = io.loadmat(\"../doubutsu.mat\")\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
